[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/GameOverPanel.gd" type="Script" id=1]
[ext_resource path="res://art/ui/panels/game_over_panel.png" type="Texture" id=2]
[ext_resource path="res://art/ui/buttons/btn_quit.png" type="Texture" id=3]
[ext_resource path="res://art/ui/buttons/btn_quit2.png" type="Texture" id=4]
[ext_resource path="res://art/ui/buttons/btn_restart.png" type="Texture" id=5]
[ext_resource path="res://art/ui/buttons/btn_restart2.png" type="Texture" id=6]
[ext_resource path="res://animations/slide_in_animation.tres" type="Animation" id=7]

[node name="GameOverPanel" type="CanvasLayer"]
offset = Vector2( 576, 0 )
transform = Transform2D( 1, 0, 0, 1, 576, 0 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 384
custom_constants/margin_left = 30
custom_constants/margin_bottom = 128

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
margin_left = 30.0
margin_top = 384.0
margin_right = 546.0
margin_bottom = 931.0
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/TextureRect"]
margin_left = 40.0
margin_top = 256.0
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 30

[node name="QuitButton" type="TextureButton" parent="MarginContainer/TextureRect/HBoxContainer"]
margin_right = 206.0
margin_bottom = 205.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )

[node name="RestartButton" type="TextureButton" parent="MarginContainer/TextureRect/HBoxContainer"]
margin_left = 236.0
margin_right = 442.0
margin_bottom = 205.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
texture_disabled = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in = ExtResource( 7 )
[connection signal="pressed" from="MarginContainer/TextureRect/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="MarginContainer/TextureRect/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
